--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -2,6 +2,7 @@ disabled_rules:
   - trailing_whitespace
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Pods
+  - SKUtilsUITests
 file_length:
   warning: 300
   error: 350
